# T-Lab

./: README.md  docker-compose.yaml
collector/: Dockerfile  main.py  pyproject.toml
collector/collector/: core.py
collector/collector/utils/: database.py
connectors/: Dockerfile  main.py  pyproject.toml
connectors/connectors/: config.py  core.py
connectors/connectors/crypto/: errors.py  exceptions.py  singleton.py
connectors/connectors/crypto/common/: data_types.py  logger.py  randomizer.py  strategies.py  user.py  webapp.py
connectors/connectors/crypto/connector/: bcb.py  binance_kyc.py  binance_link.py  coingecko.py  comply_advantage.py  core.py  defi_connector.py  elliptic.py  fireblocks.py  forex.py  mev_capital.py  pappers.py  sakana.py  strategy_connector.py
connectors/connectors/crypto/connector/common/: connector.py  platforms.py  websocket_codes.py
connectors/connectors/crypto/connector/defi/: coin_market_cap.py  debank.py  etherscan.py
connectors/connectors/crypto/connector/exchanges/: binance.py  bitmex.py  bybit.py  coinbase.py  delta_exchange.py  deribit.py  dydx.py  kraken.py  okx.py  (+1 more)
connectors/connectors/crypto/xsd/: harvest_penelop.xsd
connectors/connectors/threading/: Threads.py
connectors/connectors/utils/: __init__.py  instruction_interface.py
connectors/tests/: get_binance_orderbook.py
lab_api/: Dockerfile  app.py  main.py  pyproject.toml
lab_api/lab_api/: core.py  instruction_manager.py
lab_api/lab_api/collector/: instructions.py
lab_api/lab_api/utils/: request_interface.py
lab_api/scripts/: create_table.py
